# Page-analyzer

./: .dockerignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: code-climate.yaml  lint and tests check.yml
page_analyzer/: app.py  db.py  http_utils.py  network_utils.py  url_utils.py
page_analyzer/templates/: current_site.html  index.html  sites.html
